--- a/final-frontend/package.json
+++ b/final-frontend/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.13.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
