--- a/final-frontend/package.json
+++ b/final-frontend/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-to-print": "^2.13.0",
+    "serve": "^12.0.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
